Remove EmbeddingProviderFactory interface, have plugins return initialized providers
Plugins now read server config directly and return fully initialized
EmbeddingProvider instances instead of registering factory types.
This eliminates the factory indirection — EmbeddingCreator simply
collects providers from plugins without config/type lookup logic.